GIA-241 Integrate gia-core-service with workload-service